Apply OpenRewrite UpgradeToJava25 on test sources and fix Lombok val compatibility
Signed-off-by: Marvin Froeder <velo.br@gmail.com>