@@ -58,8 +58,8 @@ class LBClientTest {
     // test that requestOrigin and requestRecreate are same except the header 'Content-Length'
     // ps, requestOrigin and requestRecreate won't be null
     assertThat(requestOrigin.toString())
-        .contains(String.format("%s %s HTTP/1.1\n", method, urlWithEncodedJson));
+        .contains("%s %s HTTP/1.1\n".formatted(method, urlWithEncodedJson));
     assertThat(requestRecreate.toString())
-        .contains(String.format("%s %s HTTP/1.1\nContent-Length: 0\n", method, urlWithEncodedJson));
+        .contains("%s %s HTTP/1.1\nContent-Length: 0\n".formatted(method, urlWithEncodedJson));
   }
 }
